--- a/Html_Css/lists.html
+++ b/Html_Css/lists.html
@@ -27,6 +27,8 @@
       <dd>This is a finisher move by Shayna Bazsler</dd>
       <dt><b>Spear</b></dt>
       <dd>This is a finisher move by Goldberg</dd>
+      <dt><b>Spear</b></dt>
+      <dd>This is a finisher move by Bobby Lashley</dd>
     </dl>
     <br>
   </body>
