--- a/Html_Css/lists.html
+++ b/Html_Css/lists.html
@@ -29,6 +29,8 @@
       <dd>This is a finisher move by Goldberg</dd>
       <dt><b>Spear</b></dt>
       <dd>This is a finisher move by Bobby Lashley</dd>
+      <dt><b>RKO</b></dt>
+      <dd>This is a finisher move by Randy Orton</dd>
     </dl>
     <br>
   </body>
