--- a/Html_Css/lists.html
+++ b/Html_Css/lists.html
@@ -31,6 +31,8 @@
       <dd>This is a finisher move by Bobby Lashley</dd>
       <dt><b>RKO</b></dt>
       <dd>This is a finisher move by Randy Orton</dd>
+      <dt><b>Choke-Slum</b></dt>
+      <dd>This is a finisher move by The UnderTaker</dd>
     </dl>
     <br>
   </body>
