--- a/Html_Css/forms.html
+++ b/Html_Css/forms.html
@@ -13,6 +13,37 @@
         <br>
         <label for="lastName">Enter Username</label>
         <input type="text" name="lname" value="">
+        <br>
+        <label for="email">Enter E-Mail</label>
+        <input type="email" name="email" value="">
+        <br>
+        <label for="password">Set Your Password</label>
+        <input type="password" name="password" value="">
+        <br>
+        <label for="password">Enter DOB</label>
+        <input type="date" name="date" value="">
+        <br>
+        <label for="country">Enter Country</label>
+        <input list="country" name="country" id="countries" >
+        <datalist id="country">
+          <option value="Afghanistan"></option>
+          <option value="Albania"></option>
+          <option value="Algeria"></option>
+          <option value="Austria"></option>
+          <option value="Argentina"></option>
+          <option value="Chile"></option>
+          <option value="Cameroon"></option>
+          <option value="Egypt"></option>
+          <option value="Eritrea"></option>
+          <option value="Ecuador"></option>
+          <option value="France"></option>
+          <option value="Fiji"></option>
+          <option value="Finland"></option>
+          <option value="Kenya"></option>
+          <option value="Kuwait"></option>
+          <option value="Kazakstan"></option>
+        </datalist>
+
       </fieldset>
 
     </div>
