--- a/Html_Css/forms.html
+++ b/Html_Css/forms.html
@@ -43,6 +43,27 @@
           <option value="Kuwait"></option>
           <option value="Kazakstan"></option>
         </datalist>
+        <br>
+        <label for="">DBIT COURSE</label>
+        <select>
+          <optgroup label="Semester 1: ">
+            <option value="">Introduction to Programming</option>
+            <option value="">Introduction to IT</option>
+            <option value="">Communication Skills</option>
+          </optgroup>
+          <optgroup label="Semester 2:">
+            <option value="">Database Systems</option>
+            <option value="">OOP in Java</option>
+            <option value="">Business Statistics</option>
+          </optgroup>
+          <optgroup label="Semester 3:">
+            <option value="">Web Programming</option>
+            <option value="">Data Structures</option>
+            <option value="">Computer Networks</option>
+          </optgroup>
+
+        </select>
+        
 
       </fieldset>
 
