--- a/Html_Css/forms.html
+++ b/Html_Css/forms.html
@@ -61,10 +61,14 @@
             <option value="">Data Structures</option>
             <option value="">Computer Networks</option>
           </optgroup>
-
         </select>
-        
-
+        <br>
+        <label for="gender">Enter Your Gender</label>
+        <label for="">Male</label>
+        <input type="radio" value="Male">
+        <label for="">Female</label>
+        <input type="radio" value="female">
+        <br>
       </fieldset>
 
     </div>
