--- a/Html_Css/forms.html
+++ b/Html_Css/forms.html
@@ -7,7 +7,7 @@
   <body>
     <div class="division">
       <fieldset>
-        <legend>Registration-Form</legend>
+        <h1><legend><span style = "color: blue">Registration-Form</span></legend></h1>
         <label for="firstName">Enter Your Names</label>
         <input type="text" name="fname" value="">
         <br>
