--- a/Html_Css/lists.html
+++ b/Html_Css/lists.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Lists</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h3>Unordered List</h3>
     <ul>
+      <p>This is now an unordered list</p>
       <li>Kenya</li>
       <li>Ethiopia</li>
       <li>Tanzania</li>
@@ -34,6 +36,8 @@
       <dt><b>Choke-Slum</b></dt>
       <dd>This is a finisher move by The UnderTaker</dd>
     </dl>
+
+    <h1>CSS Stylesheets</h1>
 
     <br>
   </body>
