--- a/Html_Css/lists.html
+++ b/Html_Css/lists.html
@@ -8,7 +8,7 @@
   <body>
     <h3>Unordered List</h3>
     <ul>
-      <p>This is now an unordered list</p>
+      <p id="unordered-list">This is now an unordered list</p>
       <li>Kenya</li>
       <li>Ethiopia</li>
       <li>Tanzania</li>
